--- a/src/app/domains/products/pages/list/list.component.html
+++ b/src/app/domains/products/pages/list/list.component.html
@@ -1,4 +1,4 @@
-<div class="flex space-x-4  mt-5">
+<div class="flex space-x-4 mt-5 container mx-auto">
     <div class="w-56">
         <ul>
             <li>
