--- a/src/app/domains/shared/components/header/header.component.html
+++ b/src/app/domains/shared/components/header/header.component.html
@@ -1,26 +1,16 @@
-<nav>
-    <div class="w-full flex flex-wrap items-center justify-between mx-auto py-4">
+<nav class="border border-b-2">
+    <div class="w-full flex flex-wrap items-center justify-between mx-auto py-4 ">
         <div class="flex items-center space-x-8">
-            <a href="https://flowbite.com/" class="flex items-center ">
-                <img src="https://flowbite.com/docs/images/logo.svg" class="h-6 mr-3" alt="Flowbite Logo" />
-                <span class="self-center text-xl font-semibold whitespace-nowrap">Flowbite</span>
-            </a>
+            
+                <img src="https://nekydhfwaekmqbkcpkdc.supabase.co/storage/v1/object/public/images/logoMiCarritoSinFondo.png" class="h-12"/>
+                <span class="self-center text-xl font-semibold whitespace-nowrap">miCarrito</span>
+            
             <ul class="flex space-x-6">
                 <li>
                     <a routerLink="/" 
                     routerLinkActive="underline" 
                     [routerLinkActiveOptions]="{exact: true}"
                     class="block underline hover:underline" aria-current="page">Home</a>
-                </li>
-                <li>
-                    <a routerLink="/about" 
-                    routerLinkActive="underline" 
-                    class="block hover:underline">About</a>
-                </li>
-                <li>
-                    <a routerLink="/services"
-                    routerLinkActive="underline" 
-                     class="block hover:underline">Services</a>
                 </li>
             </ul>
         </div>
