--- a/src/app/domains/auth/pages/sign-up/sign-up.component.html
+++ b/src/app/domains/auth/pages/sign-up/sign-up.component.html
@@ -1,1 +1,65 @@
-<p>sign-up works!</p>
+<div class="bg-primary w-screen h-screen flex flex-col font-mono">
+    <nav class="justify-between flex p-2">
+      <div class="flex items-center space-x-4 md:space-x-4">
+        <img src="https://nekydhfwaekmqbkcpkdc.supabase.co/storage/v1/object/public/images/logoMiCarritoSinFondo.png" class="h-12 bg-secondary rounded-full" />
+        <span class="self-center mb:text-xl font-semibold whitespace-nowrap hidden md:block">miCarrito</span>
+      </div>
+      <div class="pt-2 md:p-4 flex space-x-2">
+        <a routerLink="/login" class="border border-black p-2 rounded-lg hover:cursor-pointer hover:bg-black hover:text-white">
+          Log In
+        </a>
+        <a routerLink="/contact" class="cursor-pointer pt-2 bg-secondary rounded-lg p-2 text-orange-600 md:bg-inherit">
+          Contact
+        </a>
+      </div>
+    </nav>
+  
+    <main class="flex-grow flex justify-center items-center">
+      <div class="flex flex-col gap-2 md:pt-20 md:pb-20 md:p-10 md:mb-10 md:border border-gray-300 md:rounded-lg items-center bg-white">
+        <a class="text-4xl font-sans font-bold text-center mb-6">
+          is just a sign-up away.
+        </a>
+        <form [formGroup]="signUpForm" (keydown.enter)="onSubmit()" class="flex flex-col gap-4">
+          <input
+            formControlName="email"
+            class="border border-gray-400 rounded-lg p-3 bg-primary w-96 hover:border-gray-600
+             placeholder:text-black focus:placeholder:text-gray-400 focus:border-gray-300 transition-colors
+              duration-500 placeholder:text-xs"
+            placeholder="Email" />
+  
+          <input
+            formControlName="address"
+            class="border border-gray-400 rounded-lg p-3 bg-primary w-96 hover:border-gray-600
+             placeholder:text-black focus:placeholder:text-gray-400 focus:border-gray-300 transition-colors
+              duration-500 placeholder:text-xs"
+            placeholder="Address (Ex. street 123, City)" />
+  
+          <input
+            formControlName="password"
+            class="border border-gray-400 rounded-lg p-3 bg-primary text-white w-96 hover:border-gray-600
+             placeholder:text-black focus:placeholder:text-white focus:placeholder:font-medium focus:bg-secondary
+              transition-colors duration-500 placeholder:text-xs"
+            placeholder="Password" />
+        </form>
+  
+        <div class="mt-20 text-center">
+          <p class="text-xs text-gray-600 font-sans">
+            By joining, you agree to our
+            <a routerLink="/terms" class="text-secondary font-semibold">Terms of Service</a>
+            and
+            <a routerLink="/privacy-policy" class="text-secondary font-semibold">Privacy Policy</a>.
+          </p>
+        </div>
+      </div>
+    </main>
+  
+    <footer class="items-center p-5 border border-t-gray-400 bg-white">
+      <div class="flex justify-center space-x-6">
+        <ng-icon class="text-black h-8 w-8 transform hover:scale-125 transition-all duration-300" name="bootstrapFacebook"></ng-icon>
+        <ng-icon class="text-black h-8 w-8 transform hover:scale-125 transition-all duration-300" name="bootstrapTwitterX"></ng-icon>
+        <ng-icon class="text-black h-8 w-8 transform hover:scale-125 transition-all duration-300" name="bootstrapInstagram"></ng-icon>
+      </div>
+      <p class="text-center text-base mt-4 font-sans">© 2024 miCarrito. All rights reserved.</p>
+    </footer>
+  </div>
+  
