create product and get all products finished, filtred by name and id its necesary make the part of edit and delet it

--- a/src/app/domains/admin/pages/menu/menu.component.html
+++ b/src/app/domains/admin/pages/menu/menu.component.html
@@ -1,5 +1,5 @@
 <aside class="border border-r-2 float-start h-screen w-80">
-    <div class="bg-primary  p-4 rounded-lg w-80">
+    <div class="bg-primary  p-4  w-80">
         <p class="font-semibold "> Main menu</p>
     </div>
     <div class="ml-6 mb-6 mt-6">
@@ -15,15 +15,16 @@
     <div class="ml-6 ">
         <p class="border-b-2 border-black"> Searching</p>
         <div class="pt-4 pl-4">
-            <input class="p-2 rounded-md border border-black placeholder:text-gray-700" placeholder="search by name">       
+            <input (keydown.enter)="onSearchByName($event)" type="text" required
+            class="p-2 rounded-md border border-black placeholder:text-gray-700" placeholder="search by name">       
          </div>
          <div class="pt-4 pl-4">
-            <input class="p-2 rounded-md border border-black placeholder:text-gray-700" placeholder="search by idProduct">       
+            <input (keydown.enter)="onSearchById($event)" type="number" required
+            class="p-2 rounded-md border border-black placeholder:text-gray-700" placeholder="search by idProduct">       
          </div>   
     </div>
 </aside>
 
-<!-- Contenedor donde se renderizarán los componentes según la ruta seleccionada -->
-<div class="ml-96 mt-4 p-4">
+<div class="ml-80 p-4 bg-primary h-screen">
     <router-outlet> </router-outlet>
   </div>
