--- a/src/app/domains/admin/components/create-product/create-product.component.html
+++ b/src/app/domains/admin/components/create-product/create-product.component.html
@@ -1,1 +1,48 @@
-<p>create-product works!</p>
+<main class="flex-grow flex items-center gap-10">
+    <div class="flex flex-col gap-2 md:pt-20 md:pb-20 md:p-10 border-2 sm:mt-10 md:rounded-lg items-center bg-white">
+      <h1 class="text-4xl font-sans font-bold text-center mb-6">Add New Product</h1>
+
+      <app-loading [isLoading]="isLoading"></app-loading>
+  
+      <form [formGroup]="createForm" (ngSubmit)="onSubmit()" class="flex flex-col gap-4">
+        <input formControlName="name" placeholder="Name" type="text" 
+               class="border border-gray-400 rounded-lg p-3 bg-primary w-96 hover:border-gray-600
+                placeholder:text-black focus:placeholder:text-gray-400 placeholder:text-xs" />
+  
+        <input formControlName="description" placeholder="Description" type="text" 
+               class="border border-gray-400 rounded-lg p-3 bg-primary w-96 hover:border-gray-600
+                placeholder:text-black focus:placeholder:text-gray-400 placeholder:text-xs" />
+  
+        <input formControlName="price" placeholder="Price" type="number" 
+               class="border border-gray-400 rounded-lg p-3 bg-primary w-96 hover:border-gray-600
+                placeholder:text-black focus:placeholder:text-gray-400 placeholder:text-xs" />
+  
+        <input formControlName="discount" placeholder="Discount %" type="number" 
+               class="border border-gray-400 rounded-lg p-3 bg-primary w-96 hover:border-gray-600
+                placeholder:text-black focus:placeholder:text-gray-400 placeholder:text-xs" />
+  
+        <input formControlName="stock" placeholder="Stock" type="number" 
+               class="border border-gray-400 rounded-lg p-3 bg-primary w-96 hover:border-gray-600
+                placeholder:text-black focus:placeholder:text-gray-400 placeholder:text-xs" />
+  
+        <button type="submit" class="bg-secondary text-white rounded-lg p-3 w-96 font-semibold
+         hover:bg-primary transition-colors duration-500">Create</button>
+      </form> 
+    </div>
+  
+
+      <div class="image-container border-2 rounded-t-lg w-96 h-96 flex items-center justify-center
+      bg-gray-100 relative cursor-pointer overflow-hidden"
+      (click)="imageInput.click()">
+    <input #imageInput type="file" (change)="onImageSelected($event)" hidden />
+
+    <img [src]="imageUrl ? imageUrl : 'https://nekydhfwaekmqbkcpkdc.supabase.co/storage/v1/object/public/images/logoMiCarritoSinFondo.png'" 
+        alt="Selected Image" 
+        class="absolute inset-0 w-full h-full object-cover"
+        [ngClass]="{'blur-md opacity-60': !imageUrl, 'blur-0 opacity-100': imageUrl}" />
+        
+    <span *ngIf="!imageUrl" class="text-xl text-black font-semibold z-10">Add Image</span>
+    </div>
+
+  </main>
+  
