--- a/src/app/domains/products/components/product-admin/product-admin.component.html
+++ b/src/app/domains/products/components/product-admin/product-admin.component.html
@@ -1,11 +1,18 @@
-<div class="group rounded-lg border mt-10">
+<div class="group rounded-t-lg mt-10 ">
     <a class="w-full overflow-hidden rounded-t-lg bg-gray-200">
-        <img [src]="product.image" [alt]="product.name" class="h-full w-full object-cover object-center group-hover:opacity-75 rounded-t-lg">
+        <img [src]="product.image" [alt]="product.name" class="min-h-64 max-h-64 h-full w-full object-cover object-center group-hover:opacity-75 rounded-t-lg">
     </a>
-    <div class="flex flex-col space-y-2 p-4">
+    <div class="flex flex-col space-y-2 p-4 border border-t-2">
         <h3 class="text-sm text-gray-700">{{ product.name}}</h3>
         <p class="text-lg font-medium text-gray-900">{{product.price | currency: '$' :  'symbol' : '1.00'}}</p>
         <p class="text-sm font-medium text-gray-500">Discount of {{product.discount}}%</p>
-  
+
+        <div class="flex gap-4">
+            <a class="bg-orange-600 rounded-sm p-2 cursor-pointer hover:scale-105 transition-all" (click)="onEditProduct(product)">Edit product</a>
+            <a class="bg-red-600 rounded-sm p-2 cursor-pointer hover:scale-105 transition-all" (click)="onDeleteProduct(product)">Delete product</a>
+        </div>  
     </div>
-</div>
+
+</div>  
+
+<app-loading [isLoading]="isLoading"></app-loading>
