--- a/src/app/domains/products/components/product/product.component.html
+++ b/src/app/domains/products/components/product/product.component.html
@@ -1,11 +1,22 @@
 <div class="group rounded-lg border">
     <a [routerLink]="['/product',product.id]" class="w-full overflow-hidden rounded-t-lg bg-gray-200">
-        <img [src]="product.images[0]" [alt]="product.title" class="h-full w-full object-cover object-center group-hover:opacity-75 rounded-t-lg">
+        <img [src]="product.image" [alt]="product.name" class="h-full w-full object-cover object-center group-hover:opacity-75 
+        rounded-t-lg min-h-96 max-h-96 ">
     </a>
-    <div class="flex flex-col space-y-2 p-4">
-        <h3 class="text-sm text-gray-700">{{ product.title |  uppercase}}</h3>
-        <p class="text-lg font-medium text-gray-900">{{product.price | currency: '$' :  'symbol' : '1.00'}}</p>
-        <p class="text-sm font-medium text-gray-500">{{product.creationAt | timeAgo}}</p>
+    <div class="flex flex-col space-y-2 p-4 bg-gray-300">
+        <h3 class="text-sm uppercase">{{ product.name |  uppercase}}</h3>
+        <div class="flex items-center space-x-4">
+            <span class="text-2xl font-bold text-gray-900">
+              {{ (product.price * (1 - product.discount / 100)) | currency:'$':'symbol':'1.0' }}
+            </span>
+          
+            <span class="line-through text-gray-400">
+              {{ product.price | currency:'$':'symbol':'1.0' }}
+            </span>
+          </div>
+        <div *ngIf="product.discount" class="bg-red-100 text-red-600 text-xs font-semibold px-2 py-1 rounded-full w-max">
+            {{ product.discount }}% OFF
+          </div>
         <button class="text-black bg-gray-200 font-medium rounded-lg text-sm px-5 py-2.5 w-full"
             (click)="addToCartHandler()">Add to cart</button>
     </div>
