--- a/src/app/domains/products/pages/list/list.component.html
+++ b/src/app/domains/products/pages/list/list.component.html
@@ -1,19 +1,30 @@
-<div class="flex space-x-4 mt-5 container mx-auto">
-    <div class="w-56">
-        <ul>
-            <li>
-                <a routerLink="/">All</a>
-            </li>
-            <li *ngFor="let category of categories()">
-                <a routerLink="/" [queryParams]="{category_id: category.id}">{{ category.name }}</a>
-            </li>
-        </ul>
-    </div>
-    <div class="grid grid-cols-4 gap-8 w-full">
-        <app-product
-            *ngFor="let product of products()"
-            [product]="product"
-            (addToCart)="addToCart($event)" />
-    </div>
-    
+<div class="bg-primary min-h-screen">
+    <div class="container mx-auto flex gap-6 py-10">
+
+        <div class="w-80 bg-white rounded-lg shadow-md p-6">
+            <h2 class="text-lg font-semibold mb-4 bg-secondary p-2 text-white rounded-r-lg">Categories</h2>
+            <ul class="space-y-2">
+                <li>
+                    <a (click)="getProducts()" class="block p-2 rounded-lg hover:bg-gray-200">All</a>
+                </li>
+                <li *ngFor="let category of categories()">
+                    <a (click)="getProductByCategory(category.name)"
+                       class="block p-2 rounded-lg hover:bg-gray-200 cursor-pointer">
+                        {{ category.name }}
+                    </a>
+                </li>
+            </ul>
+        </div>
+
+        <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6 w-full">
+            <app-product
+                *ngFor="let product of products()"
+                [product]="product"
+                (addToCart)="addToCart($event)">
+            </app-product>
+        </div>
+
+    </div>  
 </div>
+
+<app-loading [isLoading]="isLoading"></app-loading>
