--- a/src/app/domains/products/pages/product-detail/product-detail.component.html
+++ b/src/app/domains/products/pages/product-detail/product-detail.component.html
@@ -1,39 +1,51 @@
-<div class="w-full flex space-x-10">
-    <div class="flex flex-col w-1/3">
-      <div class="w-full rounded border border-gray-200">
-        <img
-          alt="ecommerce"
-          class="w-full object-cover object-center"
-          [src]="cover()"
-        />
-      </div>
-      <div class="flex items-center justify-center mt-1">
-        <div class="grid grid-cols-3 gap-1">
-          <img
-            alt="ecommerce"
-            class="object-cover object-center rounded border-2 border-gray-200"
-            *ngFor="let img of product()?.images"
-            [src]="img"
-            (click)="changeCover(img)"
-            [class.border-red-400]="img === cover()"
-          />
-        </div>
-      </div>
-    </div>
-    <div class="mt-5 w-full">
-      <h2 class="text-sm title-font text-gray-500 tracking-widest">{{ product()?.category?.name | uppercase }}</h2>
-      <h1 class="text-gray-900 text-3xl title-font font-medium mb-1">
-        {{ product()?.title }}
-      </h1>
-      <p class="leading-relaxed">
-        {{ product()?.description }}
-      </p>
-      <p class="title-font font-medium text-2xl text-gray-900 mt-5">{{ product()?.price | currency:'$':'symbol':'1.0' }}</p>
-      <button
-        (click)="addToCart()"
-        class="flex text-white bg-red-500 border-0 py-2 px-6 focus:outline-none hover:bg-red-600 rounded"
-      >
-        Add To Cart
-      </button>
+<div class="w-full flex flex-col md:flex-row md:space-x-10 items-center 
+md:items-start p-6 bg-white shadow-lg rounded-lg md:p-20" *ngIf="product()">
+  
+  <div class="w-full md:w-1/3 flex justify-center">
+    <div class="w-full rounded-lg overflow-hidden border border-gray-300 shadow-sm">
+      <img
+        alt="Product Image"
+        class="w-full h-auto object-cover object-center"
+        [src]="product()?.image"
+      />
     </div>
   </div>
+  
+  <div class="mt-6 md:mt-0 w-full md:w-2/3 flex flex-col space-y-4">
+    
+    <div *ngIf="product()?.discount" class="bg-red-100 text-red-600 text-xs font-semibold px-2 py-1 rounded-full w-max">
+      {{ product()?.discount }}% OFF
+    </div>
+    
+    <h1 class="text-gray-900 text-3xl font-semibold leading-tight">
+      {{ product()?.name }}
+    </h1>
+    
+    <p class="text-gray-700 text-base leading-relaxed">
+      {{ product()?.description }}
+    </p>
+    
+    <div class="flex items-center space-x-4">
+      <div class="flex items-center space-x-4">
+        <span class="text-2xl font-bold text-gray-900">
+          {{ (product()!.price * (1 - product()!.discount / 100)) | currency:'$':'symbol':'1.0' }}
+        </span>
+      
+        <span class="line-through text-gray-400">
+          {{ product()?.price | currency:'$':'symbol':'1.0' }}
+        </span>
+      </div>
+      
+
+      <button
+      (click)="addToCart()"
+      class="text-white bg-action hover:bg-actionHover font-medium py-3 px-6
+       rounded-lg transition-colors duration-300 focus:outline-none focus:ring-2 focus:ring-blue-400"
+    >
+      Add To Cart
+    </button>
+    </div>
+    
+
+  </div>
+</div>
