--- a/src/app/domains/shared/components/header/header.component.html
+++ b/src/app/domains/shared/components/header/header.component.html
@@ -29,27 +29,39 @@
     </div>
 </nav>
 
-<div class="fixed border-l-4 top-0 right-0 bg-red z-40 w-72 h-screen p-4 overflow-y-auto transition-transform bg-white "
+<div class="fixed top-0 right-0 z-40 w-96 h-screen p-6 border-l-2 border-gray-300 bg-white shadow-lg overflow-y-auto transition-transform transform"
     [class.translate-x-full]="hideSideMenu()">
-    <div class="flex justify-between items-center">
-        <p class="text-xl">My Cart</p>
-        <button (click)="toogleSideMenu()">
+
+    <div class="flex justify-between items-center mb-4 border-b pb-2">
+        <p class="text-2xl font-semibold">My Cart</p>
+        <button (click)="toogleSideMenu()" class="text-gray-500 hover:text-gray-800">
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                 stroke="currentColor" class="w-6 h-6">
                 <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12" />
             </svg>
         </button>
     </div>
-    <div class="pt-4 flex flex-col">
-        <div class="flex justify-between items-center space-y-2" *ngFor="let product of cart()">
-          <div class="flex space-x-2 items-center">
-            <img class="w-6 h-6" [src]="product.images[0]" [alt]="product.title">
-            <h3>{{ product.title }}</h3>
-          </div>
-          <p>{{ product.price }}</p>
+
+    <div class="pt-4 space-y-4">
+        <div class="flex justify-between items-center border-b pb-4" *ngFor="let product of cart()">
+            <div class="flex items-center space-x-4">
+                <img class="w-16 h-16 rounded object-cover" [src]="product.image" [alt]="product.name">
+                <div>
+                    <h3 class="text-lg font-semibold">{{ product.name }}</h3>
+                </div>
+            </div>
+            <p class="text-lg font-semibold">{{ product.price | currency:'$':'symbol' }}</p>
         </div>
-        <div>
-          <p>Total: {{ total() }}</p>
+    </div>
+
+    <div class="mt-6 border-t pt-4">
+        <div class="flex justify-between items-center text-lg font-medium">
+            <p>Total:</p>
+            <p>{{ total() | currency:'$':'symbol' }}</p>
         </div>
-      </div>
+        <button (click)="checkout()" 
+            class="mt-4 w-full bg-action text-white text-lg font-bold py-3 rounded-lg hover:bg-actionHover transition">
+            Buy Now
+        </button>
+    </div>
 </div>
